# wiggle-text-generator

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  colors.rs  main.rs  wiggle.rs
src/wiggle/: bezier.rs  eases.rs  mod.rs
